chore: RETRY_WAIT 상태 제거, Notification 플로우 단순화