@@ -1,6 +1,6 @@
 package com.example.api.dto.response;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.*;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -14,6 +14,7 @@ class NotificationBundleResponseTest {
 	@Test
 	@DisplayName("알림 묶음 목록 응답은 대표 1건을 제외한 moreCount를 계산한다")
 	void listResponseMoreCount() {
+		// given
 		NotificationGroup group = NotificationGroup.create(
 			"news-service",
 			"NewsBot",
@@ -26,8 +27,10 @@ class NotificationBundleResponseTest {
 		group.addNotification("b@example.com");
 		group.addNotification("c@example.com");
 
+		// when
 		NotificationListResponse response = NotificationListResponse.from(group);
 
+		// then
 		assertThat(response.title()).isEqualTo("속보");
 		assertThat(response.content()).isEqualTo("시장 마감 브리핑");
 		assertThat(response.totalCount()).isEqualTo(3);
@@ -37,6 +40,7 @@ class NotificationBundleResponseTest {
 	@Test
 	@DisplayName("알림 그룹 상세 응답은 그룹 내 개별 알림 목록을 포함한다")
 	void detailResponseIncludesNotifications() {
+		// given
 		NotificationGroup group = NotificationGroup.create(
 			"order-service",
 			"MyShop",
@@ -48,8 +52,10 @@ class NotificationBundleResponseTest {
 		group.addNotification("user1@example.com");
 		group.addNotification("user2@example.com");
 
+		// when
 		NotificationGroupDetailResponse response = NotificationGroupDetailResponse.from(group);
 
+		// then
 		assertThat(response.title()).isEqualTo("주문 완료");
 		assertThat(response.totalCount()).isEqualTo(2);
 		assertThat(response.notifications()).hasSize(2);
@@ -60,6 +66,7 @@ class NotificationBundleResponseTest {
 	@Test
 	@DisplayName("알림 묶음 커서 응답은 아이템과 커서 정보를 포함한다")
 	void listSliceResponseIncludesCursorMetadata() {
+		// given
 		NotificationGroup group = NotificationGroup.create(
 			"news-service",
 			"NewsBot",
@@ -75,10 +82,12 @@ class NotificationBundleResponseTest {
 			99L
 		);
 
+		// when
 		NotificationListSliceResponse response = NotificationListSliceResponse.from(slice);
 
+		// then
 		assertThat(response.items()).hasSize(1);
-		assertThat(response.items().get(0).title()).isEqualTo("속보");
+		assertThat(response.items().getFirst().title()).isEqualTo("속보");
 		assertThat(response.hasNext()).isTrue();
 		assertThat(response.nextCursorId()).isEqualTo(99L);
 	}
